BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Access_Influence__c.object
<CustomObject>
    <description>Access influence related read and editable fields. Should be visible only to sales and RS user</description>
    <fields>
        <fullName>Access_Influencer_c__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When viewing a customer profile, a flag will exist to indicate that a customer is an “Access Influencer”.  It should appear in the Customer profile page as a checkbox in both iRep and the website.  This field will be populated through an initial data load (IDL) process and will be rep maintained from there on out.

Access Influencer Classification Logic:
IF “PRIORITY” ≠ “UKNOWN”, CLASSIFY AS “Access Influencer” and shared across the user profiles.</description>
        <label>Access Influencer?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Access_Priority_c__c</fullName>
        <description>Access priority list</description>
        <label>Access Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Low Priority</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium Priority</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Priority (Select Health Plan and/or MAC)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Access Profile</relationshipLabel>
        <relationshipName>Access_Influence</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Additional_roles_c__c</fullName>
        <label>Decision Maker at Practice/Hospital</label>
        <picklist>
            <picklistValues>
                <fullName>Clinical Pathways Committee Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical/HEOR Research Leadership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-Suite / Board of Directors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guidelines or Protocol Committee Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P &amp; T Committee Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>BMS_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Editorial_board_c__c</fullName>
        <label>Access Journal Editorial Board Member</label>
        <picklist>
            <picklistValues>
                <fullName>JOP: Journal of Oncology Practice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VBCC: Value-Based Cancer Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OBR: Oncology Business Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCO: Managed Care Oncology</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Health_plans_c__c</fullName>
        <description>Access influence health plans</description>
        <label>Known Links to Health Plans</label>
        <picklist>
            <picklistValues>
                <fullName>Aetna</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assurant Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCBS of Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCBS of Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCBS of Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCBS of Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCBS of Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCBS of Kansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCBS of Kansas City</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCBS of Louisiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCBS of Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCBS of Michigan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCBS of Minnesota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCBS of Nebraska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCBS of North Carolina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCBS of Oklahoma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCBS of South Carolina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCBS of Tennessee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCBS of Texas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blue Shield of CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital BlueCross</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CareFirst BCBS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIGNA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coventry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excellus BCBS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government Employees Health Assoc.(GEHA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group Health/Emblem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group Health Cooperative (WA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Harvard Pilgrim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Net</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>MACs__c</fullName>
        <description>Access influence MACs</description>
        <label>Known Links to MACs</label>
        <picklist>
            <picklistValues>
                <fullName>Cahaba GBA (AL, GA, TN)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CGS Administrators (KY, OH)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>First Coast Service Options (FL, PR, VI)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Government Services (CT, NY)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Government Services (IL, MN, WI)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Heritage Insurance (ME, MA, NH, RI, VT)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Noridian Administrative Services (AK, AZ, ID, MT, ND, OR, SD, UT, WA, WY)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Novitas Solutions (AR, LA, MS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Novitas Solutions (DE, DC, MD, NJ, PA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Palmetto GBA (CA, HI, NV)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Palmetto GBA (NC, SC, VA, WV)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TrailBlazer Health Enterprises (CO, NM, OK, TX)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wisconsin Physician Services (IA, KS, MO, NE)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wisconsin Physician Services (IN, MI)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NCCN_guidelines_c__c</fullName>
        <description>Access influence NCCN guidelines</description>
        <label>Leadership Position at NCCN</label>
        <picklist>
            <picklistValues>
                <fullName>Breast Guidelines Panel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CML Guidelines Panel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colon Guidelines Panel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Head &amp; Neck Guidelines Panel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Melanoma Guidelines Panel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rectal Guidelines Panel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Steering Committee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>National_associations_c__c</fullName>
        <description>Access influence national associations</description>
        <label>Leadership Position at National Assoc</label>
        <picklist>
            <picklistValues>
                <fullName>ACMPE: Am. College of Medical Practice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACOA: Am. College of Onc. Administrators</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AHS ASH: Am. Society of Hematology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASCO QOPI: Quality Onc. Practice Initiat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US Oncology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACCC: Assoc. of Community Cancer Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASCO: Am. Society of Clinical Onc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COA: Community Onc. Alliance</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Other_Access_Organizations_c__c</fullName>
        <label>Leadership Position at Other Access Org</label>
        <picklist>
            <picklistValues>
                <fullName>ICORE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D3 Oncology Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eviti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Innovent Oncology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Experienced Prescribers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Century Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oncology analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RainTree Advisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RainTree Leadership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US Oncology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ViaOncology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Other_compendia_c__c</fullName>
        <description>Access influence other compendia</description>
        <label>Leadership Position at Other Compendia</label>
        <picklist>
            <picklistValues>
                <fullName>Am. Hospital Formulary Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASCO Guidelines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DrugDex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elsevier Gold Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Milliman</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>PBMs__c</fullName>
        <description>Access influence PBMs</description>
        <label>Known Links to PBMs</label>
        <picklist>
            <picklistValues>
                <fullName>Argus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catalyst Rx</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company Managed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CVS/Caremark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Express Scripts, Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FutureScripts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>InformedRx</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kaiser Permanente Pharmacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medco Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MedImpact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prime Therapeutics, Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regence Rx</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Right Source (Humana subsidiary)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State Medicaid Formulary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Regional_associations_c__c</fullName>
        <description>Access influence regional associations</description>
        <label>Regional Associations</label>
        <picklist>
            <picklistValues>
                <fullName>AK: Alaska Cancer Care Alliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL: Alabama Cancer Congress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL: Alabama State Management Society</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ: The Arizona Clinical Onc. Society</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA: Assoc. of Northern California Oncol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA: Medical Onc. Assoc. of Southern Cali</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO: Rocky Mountain Onc. Society</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT: Connecticut Onc. Assoc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE: Delaware Med. Group Management Assoc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE: Delaware Society for Clinical Onc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL: Florida Society of Clinical Onc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL: Onc. Managers of Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA: Georgia Society of Clinical Onc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA: Medical Group Management Assoc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI: Hawaii Society of Clinical Onc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA: Iowa Onc. Society</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID: Idaho Society of Clinical Onc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL: Illinois Medical Onc. Society</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN: Indiana Onc. Society</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS: Kansas Society of Clinical Onc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA: Louisiana Onc. Society</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA: Massachusetts Society of Clinical On</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD: Maryland and District of Columbia So</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME: Northern New England Clinical Onc. S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medicare Carrier Adv Comm Mem (Pick MAC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI: Michigan Society of Hematology and O</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN: Minnesota Society of Clinical Onc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO: Missouri Onc. Society</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS: Mississippi Onc. Society</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NC: Am. Society of Hematology</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Relationship_status_c__c</fullName>
        <description>Access Knowledge status</description>
        <label>Customer Knowledge of Access Dynamics</label>
        <picklist>
            <picklistValues>
                <fullName>Access Aware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Access Unaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Access Active</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SPPs__c</fullName>
        <description>Access influence SPPs</description>
        <label>Known Links to SPPs</label>
        <picklist>
            <picklistValues>
                <fullName>Accredo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avella</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biologics, Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CuraScript</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CVS/Caremark Specialty Pharmacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diplomat Specialty Pharmacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater Sacramento Pharmacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OncologyRx Care Advantage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prime Specialty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RightSource-Humana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The Community (formerly BioScrip)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US Bioservices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Walgreens Specialty Pharmacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Walmart Specialty Pharmacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Access Profile</label>
    <nameField>
        <displayFormat>AI-{00000}</displayFormat>
        <label>Access Influence ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Access Profile</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Access_influence_rule</fullName>
        <active>true</active>
        <errorConditionFormula>(Account__r.Access_Profile__c &gt;= 1) &amp;&amp; (Id = null)</errorConditionFormula>
        <errorDisplayField>Access_Influencer_c__c</errorDisplayField>
        <errorMessage>There is already an access influence record associated with this account.</errorMessage>
    </validationRules>
</CustomObject>